deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: passgen
  labels:
    app: passgen
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: passgen
    spec:
      containers:
        - name: passgen
          image: kristianwindsor/passgen.site
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 0m
              memory: 0
