ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: passgen.site
    http:
      paths:
      - path: /
        backend:
          serviceName: passgen-site
          servicePort: 80
  tls:
  - secretName: passgen-cert
    hosts:
    - passgen.site
